// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manySchemas 1`] = `
Object {
  "Test": Object {
    "$schema": "http://json-schema.org/draft-04/schema#",
    "additionalProperties": false,
    "properties": Object {
      "a": Object {
        "description": "a",
        "minimum": 1,
        "type": "number",
      },
    },
    "required": Array [
      "a",
    ],
    "type": "object",
  },
  "Test2": Object {
    "$schema": "http://json-schema.org/draft-04/schema#",
    "additionalProperties": false,
    "properties": Object {
      "c": Object {
        "enum": Array [
          1,
          2,
          3,
        ],
        "type": "number",
      },
    },
    "required": Array [
      "c",
    ],
    "type": "object",
  },
}
`;

exports[`multipleSchemas 1`] = `
Array [
  Object {
    "name": "Test",
    "schema": Object {
      "$schema": "http://json-schema.org/draft-04/schema#",
      "additionalProperties": false,
      "id": undefined,
      "properties": Object {
        "a": Object {
          "description": "a",
          "minimum": 1,
          "type": "number",
        },
      },
      "required": Array [
        "a",
      ],
      "type": "object",
    },
    "type": "ITest",
  },
  Object {
    "name": "Test2",
    "schema": Object {
      "$schema": "http://json-schema.org/draft-04/schema#",
      "additionalProperties": false,
      "id": undefined,
      "properties": Object {
        "c": Object {
          "enum": Array [
            1,
            2,
            3,
          ],
          "type": "number",
        },
      },
      "required": Array [
        "c",
      ],
      "type": "object",
    },
    "type": "ITest2",
  },
]
`;

exports[`saveExports 1`] = `
Object {
  "a": Object {
    "foo": 1,
  },
  "b": Object {
    "bar": 2,
  },
}
`;

exports[`singleSchema 1`] = `
Object {
  "name": "Test",
  "schema": Object {
    "$schema": "http://json-schema.org/draft-04/schema#",
    "additionalProperties": false,
    "id": undefined,
    "properties": Object {
      "a": Object {
        "description": "a",
        "minimum": 1,
        "type": "number",
      },
    },
    "required": Array [
      "a",
    ],
    "type": "object",
  },
  "type": "ITest",
}
`;

exports[`singleSchemaDefaultExport 1`] = `
Object {
  "default": Object {
    "$schema": "http://json-schema.org/draft-04/schema#",
    "additionalProperties": false,
    "properties": Object {
      "a": Object {
        "description": "a",
        "minimum": 1,
        "type": "number",
      },
    },
    "required": Array [
      "a",
    ],
    "type": "object",
  },
}
`;

exports[`singleSchemaJson 1`] = `
Object {
  "name": "Test",
  "schema": Object {
    "$schema": "http://json-schema.org/draft-04/schema#",
    "additionalProperties": false,
    "properties": Object {
      "a": Object {
        "description": "a",
        "minimum": 1,
        "type": "number",
      },
    },
    "required": Array [
      "a",
    ],
    "type": "object",
  },
  "type": "ITest",
}
`;
